--- a/ClothesStore.Infrastructure/ClothesStore.Infrastructure.csproj
+++ b/ClothesStore.Infrastructure/ClothesStore.Infrastructure.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\ClothesStrore.Application\ClothesStrore.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
