adding email service and forgot password

--- a/ClothesStore.API/appsettings.json
+++ b/ClothesStore.API/appsettings.json
@@ -13,5 +13,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ClothesStoreConnection": "Data Source=DANIEL-RAKIPLLA\\DRAKIPLLARI;Initial Catalog=ClothesStoreDb;Integrated Security=True;TrustServerCertificate=True"
-  }
+  },
+  "EmailHost": "smtp.ethereal.email",
+  "EmailUsername": "derick.farrell@ethereal.email",
+  "EmailPassword": "HBVYJQqtAT3NpkcqzA"
 }
