--- a/ClothesStore.Domain/ClothesStore.Domain.csproj
+++ b/ClothesStore.Domain/ClothesStore.Domain.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
+    <PackageReference Include="Stripe.net" Version="42.9.0" />
   </ItemGroup>
 
 </Project>
