--- a/ClothesStore.Infrastructure/ClothesStore.Infrastructure.csproj
+++ b/ClothesStore.Infrastructure/ClothesStore.Infrastructure.csproj
@@ -20,6 +20,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.32.1" />
+    <PackageReference Include="Stripe.net" Version="42.9.0" />
   </ItemGroup>
 
   <ItemGroup>
