Add refresh token

--- a/ClothesStore.API/appsettings.json
+++ b/ClothesStore.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Jwt": {
-    "Issuer": "https://joydipkanjilal.com/",
-    "Audience": "https://joydipkanjilal.com/",
+    "Issuer": "https://localhost:7001/",
+    "Audience": "https://localhost:7001/",
     "Key": "MyAppClothesStoreProjectWithSecretKey"
   },
   "Logging": {
